[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player/End/AleSoloEnd.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Office/OfficeTileset.tres" type="TileSet" id=2]
[ext_resource path="res://Player/End/YoheSoloEnd.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/End/MovementStopArea.gd" type="Script" id=4]
[ext_resource path="res://World/End/Ending.gd" type="Script" id=5]
[ext_resource path="res://Player/End/AleYoheEnd.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/End/Kiki.tscn" type="PackedScene" id=7]
[ext_resource path="res://Music/Lasso - Hasta Ese Dia.mp3" type="AudioStream" id=8]
[ext_resource path="res://World/Street/StreetTileset.tres" type="TileSet" id=9]
[ext_resource path="res://World/End/ParkTileset.tres" type="TileSet" id=10]
[ext_resource path="res://World/End/Church.png" type="Texture" id=11]
[ext_resource path="res://Player/Assets/Both/Dress/IdleAle.png" type="Texture" id=12]
[ext_resource path="res://UI/Transition/Transition.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 44 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 23 )

[sub_resource type="RectangleShape2D" id=3]

[node name="Ending" type="Node2D"]
script = ExtResource( 5 )

[node name="FirstAreaTiles" type="Node2D" parent="."]

[node name="BackgroundTiles" type="Node2D" parent="FirstAreaTiles"]

[node name="BackgroundOffice" type="TileMap" parent="FirstAreaTiles/BackgroundTiles"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -327619, 3, 0, -327618, 3, 0, -327617, 3, 0, -327616, 3, 0, -327615, 3, 0, -327614, 3, 0, -327613, 3, 0, -327612, 3, 0, -327611, 3, 0, -327610, 3, 0, -327609, 3, 0, -327608, 3, 0, -327607, 3, 0, -327606, 3, 0, -327605, 3, 0, -327604, 3, 0, -262083, 3, 0, -262082, 3, 0, -262081, 3, 0, -262080, 3, 0, -262079, 3, 0, -262078, 3, 0, -262077, 3, 0, -262076, 3, 0, -262075, 3, 0, -262074, 3, 0, -262073, 3, 0, -262072, 3, 0, -262071, 3, 0, -262070, 3, 0, -262069, 3, 0, -262068, 3, 0, -196547, 3, 0, -196546, 3, 0, -196545, 3, 0, -196544, 3, 0, -196543, 3, 0, -196542, 3, 0, -196541, 3, 0, -196540, 3, 0, -196539, 3, 0, -196538, 3, 0, -196537, 3, 0, -196536, 3, 0, -196535, 3, 0, -196534, 3, 0, -196533, 3, 0, -196532, 3, 0, -131011, 3, 0, -131010, 3, 0, -131009, 3, 0, -131008, 3, 0, -131007, 3, 0, -131006, 3, 0, -131005, 3, 0, -131004, 3, 0, -131003, 3, 0, -131002, 3, 0, -131001, 3, 0, -131000, 3, 0, -130999, 3, 0, -130998, 3, 0, -130997, 3, 0, -130996, 3, 0, -65475, 3, 0, -65474, 3, 0, -65473, 3, 0, -65472, 3, 0, -65471, 3, 0, -65470, 3, 0, -65469, 3, 0, -65468, 3, 0, -65467, 3, 0, -65466, 3, 0, -65465, 3, 0, -65463, 3, 0, -65462, 3, 0, -65461, 3, 0, -65460, 3, 0, 6, 26, 0, 7, 26, 0, 8, 26, 0, 9, 26, 0, 10, 26, 0, 11, 26, 0, 12, 26, 0, 61, 3, 0, 62, 3, 0, 63, 3, 0, 64, 3, 0, 65, 3, 0, 66, 3, 0, 67, 3, 0, 68, 3, 0, 69, 3, 0, 70, 3, 0, 71, 3, 0, 74, 3, 0, 75, 3, 0, 76, 3, 0, 131067, 3, 0, 131068, 3, 0, 131069, 3, 0, 131070, 3, 0, 131071, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65597, 3, 0, 65598, 3, 0, 65599, 3, 0, 65600, 3, 0, 65601, 3, 0, 65602, 3, 0, 65603, 3, 0, 65604, 3, 0, 65605, 3, 0, 65606, 3, 0, 65610, 3, 0, 65611, 3, 0, 65612, 3, 0, 196606, 3, 0, 196607, 1, 0, 131072, 5, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 5, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131133, 3, 0, 131134, 3, 0, 131135, 3, 0, 131136, 3, 0, 131137, 3, 0, 131138, 3, 0, 131139, 3, 0, 131140, 3, 0, 131147, 3, 0, 131148, 3, 0, 262142, 3, 0, 262143, 4, 0, 196608, 6, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 6, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196669, 3, 0, 196670, 3, 0, 196671, 3, 0, 196672, 3, 0, 196673, 3, 0, 196674, 3, 0, 196675, 3, 0, 196676, 3, 0, 196683, 3, 0, 196684, 3, 0 )

[node name="BackgroundStreet" type="TileMap" parent="FirstAreaTiles/BackgroundTiles"]
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -327681, 10, 0, -393216, 10, 0, -393215, 10, 0, -393214, 10, 0, -393213, 10, 0, -393212, 10, 0, -393211, 10, 0, -393210, 10, 0, -262147, 11, 0, -262146, 11, 0, -262145, 10, 0, -327680, 10, 0, -327679, 10, 0, -327678, 10, 0, -327677, 10, 0, -327676, 10, 0, -327675, 10, 0, -327674, 10, 0, -327673, 11, 0, -327672, 11, 0, -327671, 11, 0, -327670, 11, 0, -327669, 11, 0, -327668, 11, 0, -327635, 11, 0, -327634, 11, 0, -327633, 11, 0, -327632, 11, 0, -327631, 11, 0, -327630, 11, 0, -327629, 11, 0, -327628, 11, 0, -327627, 11, 0, -327626, 11, 0, -327625, 11, 0, -327624, 11, 0, -327623, 11, 0, -327622, 11, 0, -327621, 11, 0, -327620, 11, 0, -196611, 11, 0, -196610, 11, 0, -196609, 10, 0, -262144, 10, 0, -262143, 10, 0, -262142, 10, 0, -262141, 10, 0, -262140, 10, 0, -262139, 10, 0, -262138, 10, 0, -262137, 11, 0, -262136, 11, 0, -262135, 11, 0, -262134, 11, 0, -262133, 11, 0, -262132, 11, 0, -262099, 11, 0, -262098, 11, 0, -262097, 11, 0, -262096, 11, 0, -262095, 11, 0, -262094, 11, 0, -262093, 11, 0, -262092, 11, 0, -262091, 11, 0, -262090, 11, 0, -262089, 11, 0, -262088, 11, 0, -262087, 11, 0, -262086, 11, 0, -262085, 11, 0, -262084, 11, 0, -131075, 11, 0, -131074, 11, 0, -131073, 10, 0, -196608, 10, 0, -196607, 10, 0, -196606, 10, 0, -196605, 10, 0, -196604, 10, 0, -196603, 10, 0, -196602, 10, 0, -196601, 11, 0, -196600, 11, 0, -196599, 11, 0, -196598, 11, 0, -196597, 11, 0, -196596, 11, 0, -196563, 11, 0, -196562, 11, 0, -196561, 11, 0, -196560, 11, 0, -196559, 11, 0, -196558, 11, 0, -196557, 11, 0, -196556, 11, 0, -196555, 11, 0, -196554, 11, 0, -196553, 11, 0, -196552, 11, 0, -196551, 11, 0, -196550, 11, 0, -196549, 11, 0, -196548, 11, 0, -65539, 11, 0, -65538, 11, 0, -65537, 10, 0, -131072, 10, 0, -131071, 10, 0, -131070, 10, 0, -131069, 10, 0, -131068, 10, 0, -131067, 10, 0, -131066, 10, 0, -131065, 11, 0, -131064, 11, 0, -131063, 11, 0, -131062, 11, 0, -131061, 11, 0, -131060, 11, 0, -131027, 11, 0, -131026, 11, 0, -131025, 11, 0, -131024, 11, 0, -131023, 11, 0, -131022, 11, 0, -131021, 11, 0, -131020, 11, 0, -131019, 11, 0, -131018, 11, 0, -131017, 11, 0, -131016, 11, 0, -131015, 11, 0, -131014, 11, 0, -131013, 11, 0, -131012, 11, 0, -3, 11, 0, -2, 11, 0, -1, 11, 0, -65536, 11, 0, -65535, 11, 0, -65534, 11, 0, -65533, 11, 0, -65532, 11, 0, -65531, 11, 0, -65530, 11, 0, -65529, 11, 0, -65528, 11, 0, -65527, 11, 0, -65526, 11, 0, -65525, 11, 0, -65524, 11, 0, -65491, 11, 0, -65490, 11, 0, -65489, 11, 0, -65488, 11, 0, -65487, 11, 0, -65486, 11, 0, -65485, 11, 0, -65484, 11, 0, -65483, 11, 0, -65482, 11, 0, -65481, 11, 0, -65480, 11, 0, -65479, 11, 0, -65478, 11, 0, -65477, 11, 0, -65476, 11, 0, 45, 11, 0, 46, 11, 0, 47, 11, 0, 48, 11, 0, 49, 11, 0, 50, 11, 0, 51, 11, 0, 52, 11, 0, 53, 11, 0, 54, 11, 0, 55, 11, 0, 56, 11, 0, 57, 11, 0, 58, 11, 0, 59, 11, 0, 60, 11, 0, 65581, 11, 0, 65582, 11, 0, 65583, 11, 0, 65584, 11, 0, 65585, 11, 0, 65586, 11, 0, 65587, 11, 0, 65588, 11, 0, 65589, 11, 0, 65590, 11, 0, 65591, 11, 0, 65592, 11, 0, 65593, 11, 0, 65594, 11, 0, 65595, 11, 0, 65596, 11, 0, 131117, 11, 0, 131118, 11, 0, 131119, 11, 0, 131120, 11, 0, 131121, 11, 0, 131122, 11, 0, 131123, 11, 0, 131124, 11, 0, 131125, 11, 0, 131126, 11, 0, 131127, 11, 0, 131128, 11, 0, 131129, 11, 0, 131130, 11, 0, 131131, 11, 0, 131132, 11, 0, 196653, 11, 0, 196654, 11, 0, 196655, 11, 0, 196656, 11, 0, 196657, 11, 0, 196658, 11, 0, 196659, 11, 0, 196660, 11, 0, 196661, 11, 0, 196662, 11, 0, 196663, 11, 0, 196664, 11, 0, 196665, 11, 0, 196666, 11, 0, 196667, 11, 0, 196668, 11, 0, 262189, 0, 1, 262190, 0, 1, 262191, 0, 1, 262192, 0, 1, 262193, 0, 1, 262194, 0, 1, 262195, 0, 1, 262196, 0, 1, 262197, 0, 1, 262198, 0, 1, 262199, 0, 1, 262200, 0, 1, 262201, 0, 1, 262202, 0, 1, 262203, 0, 1, 262204, 0, 1 )

[node name="BackgroundStars" type="TileMap" parent="FirstAreaTiles/BackgroundTiles"]
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -327668, 1, 0, -262137, 3, 0, -262133, 4, 0, -262095, 1, 0, -262085, 3, 0, -196598, 2, 0, -196551, 4, 0, -131064, 1, 0, -131026, 2, 0, -131018, 3, 0, 65582, 1, 0, 65585, 3, 0, 65595, 1, 0, 131118, 7, 0, 131124, 2, 0, 131125, 7, 0, 131131, 7, 0, 196654, 7, 65536, 196655, 6, 0, 196656, 6, 1, 196661, 7, 65536, 196663, 6, 0, 196664, 6, 1, 196667, 7, 65536 )

[node name="BackgroundClouds" type="TileMap" parent="FirstAreaTiles/BackgroundTiles"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -262077, 17, 0, -262070, 18, 0, -196535, 19, 0, -196534, 20, 0, -131010, 17, 0, -131006, 19, 0, -131005, 20, 0, -130996, 17, 0, 62, 19, 0, 63, 20, 0, 65546, 19, 0, 65547, 20, 0, 131079, 17, 0, 131138, 17, 0, 262143, 14, 0 )

[node name="LevelTiles" type="Node2D" parent="FirstAreaTiles"]

[node name="OfficeTiles" type="TileMap" parent="FirstAreaTiles/LevelTiles"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 128
collision_mask = 257
format = 1
tile_data = PoolIntArray( 65526, 24, 0, 65527, 24, 0, 65528, 24, 0, 65529, 24, 0, 65530, 24, 0, 65531, 24, 0, 65532, 24, 0, 65533, 24, 0, 65534, 24, 0, 65535, 24, 0, 0, 24, 0, 1, 24, 0, 2, 24, 0, 3, 24, 0, 4, 24, 0, 5, 24, 0, 6, 25, 0, 28, 0, 0, 44, 0, 0, 131062, 0, 65540, 131063, 2, 0, 131064, 2, 0, 131065, 2, 0, 131066, 2, 0, 131067, 2, 0, 131068, 2, 0, 131069, 2, 0, 131070, 2, 0, 131071, 0, 65539, 65536, 0, 65539, 65537, 0, 65539, 65538, 0, 65539, 65539, 0, 65539, 65540, 0, 65539, 65541, 0, 65539, 65542, 0, 65538, 196598, 0, 65540, 196599, 2, 0, 196600, 2, 0, 196601, 2, 0, 196602, 2, 0, 196603, 2, 0, 196604, 2, 0, 196605, 2, 0, 196606, 0, 4, 262134, 0, 65540, 262135, 2, 0, 262136, 2, 0, 262137, 2, 0, 262138, 2, 0, 262139, 2, 0, 262140, 2, 0, 262141, 2, 0, 262142, 0, 4, 327670, 0, 65540, 327671, 2, 0, 327672, 2, 0, 327673, 2, 0, 327674, 2, 0, 327675, 2, 0, 327676, 2, 0, 327677, 2, 0, 327678, 2, 0, 327679, 0, 3, 262144, 0, 3, 262145, 0, 3, 262146, 0, 3, 262147, 0, 3, 262148, 0, 3, 262149, 0, 3, 262150, 0, 2, 262151, 0, 3, 262152, 0, 3, 262153, 0, 3, 262154, 0, 3, 262155, 0, 3, 262156, 0, 3, 262157, 0, 3, 262158, 0, 3, 262159, 0, 3, 262160, 0, 3, 262161, 0, 3, 262162, 0, 3, 262163, 0, 3, 262164, 0, 3, 262165, 0, 3, 262166, 0, 3, 262167, 0, 3, 262168, 0, 3, 262169, 0, 3, 262170, 0, 3, 262171, 0, 3, 262172, 0, 3, 262173, 0, 3, 262174, 0, 3, 262175, 0, 3, 262176, 0, 3, 262177, 0, 3, 262178, 0, 3, 262179, 0, 3, 262180, 0, 3, 262181, 0, 3, 262182, 0, 3, 262183, 0, 3, 262184, 0, 3, 262185, 0, 3, 262186, 0, 3, 262187, 0, 3, 262188, 0, 3, 262205, 0, 3, 262206, 0, 3, 262207, 0, 3, 262208, 0, 3, 262209, 0, 3, 262210, 0, 3, 262211, 0, 3, 262212, 0, 3, 262213, 0, 3, 262214, 0, 3, 262215, 0, 3, 262216, 0, 3, 262217, 0, 3, 262218, 0, 3, 262219, 0, 3, 262220, 0, 3, 262221, 0, 3, 262222, 0, 3, 262223, 0, 3, 262224, 0, 3, 262225, 0, 3, 262226, 0, 3, 262227, 0, 3, 262228, 0, 3, 262229, 0, 3, 262230, 0, 3, 262231, 0, 3, 262232, 0, 3, 262233, 0, 2, 393206, 0, 65537, 393207, 0, 65539, 393208, 0, 65539, 393209, 0, 65539, 393210, 0, 65539, 393211, 0, 65539, 393212, 0, 65539, 393213, 0, 65539, 393214, 0, 65539, 393215, 0, 65539, 327680, 0, 65539, 327681, 0, 65539, 327682, 0, 65539, 327683, 0, 65539, 327684, 0, 65539, 327685, 0, 65539, 327686, 0, 65538, 327687, 0, 65539, 327688, 0, 65539, 327689, 0, 65539, 327690, 0, 65539, 327691, 0, 65539, 327692, 0, 65539, 327693, 0, 65539, 327694, 0, 65539, 327695, 0, 65539, 327696, 0, 65539, 327697, 0, 65539, 327698, 0, 65539, 327699, 0, 65539, 327700, 0, 65539, 327701, 0, 65539, 327702, 0, 65539, 327703, 0, 65539, 327704, 0, 65539, 327705, 0, 65539, 327706, 0, 65539, 327707, 0, 65539, 327708, 0, 65539, 327709, 0, 65539, 327710, 0, 65539, 327711, 0, 65539, 327712, 0, 65539, 327713, 0, 65539, 327714, 0, 65539, 327715, 0, 65539, 327716, 0, 65539, 327717, 0, 65539, 327718, 0, 65539, 327719, 0, 65539, 327720, 0, 65539, 327721, 0, 65539, 327722, 0, 65539, 327723, 0, 65539, 327724, 0, 65539, 327725, 0, 65539, 327726, 0, 65539, 327727, 0, 65539, 327728, 0, 65539, 327729, 0, 65539, 327730, 0, 65539, 327731, 0, 65539, 327732, 0, 65539, 327733, 0, 65539, 327734, 0, 65539, 327735, 0, 65539, 327736, 0, 65539, 327737, 0, 65539, 327738, 0, 65539, 327739, 0, 65539, 327740, 0, 65539, 327741, 0, 65539, 327742, 0, 65539, 327743, 0, 65539, 327744, 0, 65539, 327745, 0, 65539, 327746, 0, 65539, 327747, 0, 65539, 327748, 0, 65539, 327749, 0, 65539, 327750, 0, 65539, 327751, 0, 65539, 327752, 0, 65539, 327753, 0, 65539, 327754, 0, 65539, 327755, 0, 65539, 327756, 0, 65539, 327757, 0, 65539, 327758, 0, 65539, 327759, 0, 65539, 327760, 0, 65539, 327761, 0, 65539, 327762, 0, 65539, 327763, 0, 65539, 327764, 0, 65539, 327765, 0, 65539, 327766, 0, 65539, 327767, 0, 65539, 327768, 0, 65539, 327769, 0, 65538 )

[node name="StreetTiles" type="TileMap" parent="FirstAreaTiles/LevelTiles"]
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
collision_layer = 128
collision_mask = 257
format = 1
tile_data = PoolIntArray( -524295, 0, 1, -524294, 0, 3, -524293, 0, 3, -524292, 0, 3, -524291, 0, 3, -524290, 0, 2, -458759, 0, 65540, -458758, 0, 65536, -458757, 0, 65536, -458756, 0, 65536, -458755, 0, 65536, -458754, 0, 4, -393223, 0, 65540, -393222, 0, 65536, -393221, 0, 65536, -393220, 0, 65536, -393219, 0, 65536, -393218, 0, 4, -327687, 0, 65540, -327686, 0, 65536, -327685, 0, 65536, -327684, 0, 65536, -327683, 0, 65536, -327682, 0, 4, -262151, 0, 65540, -262150, 0, 65536, -262149, 0, 65536, -262148, 0, 65536, -262147, 0, 65536, -262146, 0, 4, -196615, 0, 65540, -196614, 0, 65536, -196613, 0, 65536, -196612, 0, 65536, -196611, 0, 65536, -196610, 0, 4, -131079, 0, 65540, -131078, 0, 65536, -131077, 0, 65536, -131076, 0, 65536, -131075, 0, 65536, -131074, 0, 4, -196608, 5, 0, -196607, 5, 1, -65543, 0, 65540, -65542, 0, 65536, -65541, 0, 65536, -65540, 0, 65536, -65539, 0, 65536, -65538, 0, 4, -131072, 5, 65536, -131071, 5, 65537, -7, 0, 65540, -6, 0, 65536, -5, 0, 65536, -4, 0, 65536, -3, 0, 65536, -2, 0, 3, -1, 0, 3, -65536, 0, 3, -65535, 0, 3, -65534, 0, 3, -65533, 0, 3, -65532, 0, 3, -65531, 0, 3, -65530, 0, 2, 262151, 8, 0, 262152, 9, 0, 262153, 8, 0, 262154, 8, 0, 262155, 9, 0, 262156, 8, 0, 262189, 8, 0, 262190, 8, 0, 262191, 9, 0, 262192, 8, 0, 262193, 8, 0, 262194, 8, 0, 262195, 9, 0, 262196, 8, 0, 262197, 8, 0, 262198, 8, 0, 262199, 9, 0, 262200, 8, 0, 262201, 8, 0, 262202, 8, 0, 262203, 9, 0, 262204, 8, 0 )

[node name="OtherAreaTiles" type="Node2D" parent="."]

[node name="BackgroundTiles" type="Node2D" parent="OtherAreaTiles"]

[node name="Background" type="TileMap" parent="OtherAreaTiles/BackgroundTiles"]
tile_set = ExtResource( 10 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -327667, 6, 0, -327666, 6, 0, -327665, 6, 0, -327664, 6, 0, -327663, 6, 0, -327662, 6, 0, -327661, 6, 0, -327660, 6, 0, -327659, 6, 0, -327658, 6, 0, -327657, 6, 0, -327656, 6, 0, -327655, 6, 0, -327654, 6, 0, -327653, 6, 0, -327652, 6, 0, -327651, 11, 0, -327650, 11, 0, -327649, 11, 0, -327648, 11, 0, -327647, 11, 0, -327646, 11, 0, -327645, 11, 0, -327644, 11, 0, -327643, 11, 0, -327642, 11, 0, -327641, 11, 0, -327640, 11, 0, -327639, 11, 0, -327638, 11, 0, -327637, 11, 0, -327636, 11, 0, -262131, 6, 0, -262130, 6, 0, -262129, 6, 0, -262128, 6, 0, -262127, 6, 0, -262126, 6, 0, -262125, 6, 0, -262124, 6, 0, -262123, 6, 0, -262122, 6, 0, -262121, 6, 0, -262120, 6, 0, -262119, 6, 0, -262118, 6, 0, -262117, 6, 0, -262116, 6, 0, -262115, 11, 0, -262114, 11, 0, -262113, 11, 0, -262112, 11, 0, -262111, 11, 0, -262110, 11, 0, -262109, 11, 0, -262108, 11, 0, -262107, 11, 0, -262106, 11, 0, -262105, 11, 0, -262104, 11, 0, -262103, 11, 0, -262102, 11, 0, -262101, 11, 0, -262100, 11, 0, -196595, 6, 0, -196594, 6, 0, -196593, 6, 0, -196592, 6, 0, -196591, 6, 0, -196590, 6, 0, -196589, 6, 0, -196588, 6, 0, -196587, 6, 0, -196586, 6, 0, -196585, 6, 0, -196584, 6, 0, -196583, 6, 0, -196582, 6, 0, -196581, 6, 0, -196580, 6, 0, -196579, 8, 0, -196578, 8, 0, -196577, 8, 0, -196576, 8, 0, -196575, 8, 0, -196574, 8, 0, -196573, 8, 0, -196572, 8, 0, -196571, 8, 0, -196570, 8, 0, -196569, 8, 0, -196568, 8, 0, -196567, 8, 0, -196566, 8, 0, -196565, 8, 0, -196564, 8, 0, -131059, 6, 0, -131058, 6, 0, -131057, 6, 0, -131056, 6, 0, -131055, 6, 0, -131054, 6, 0, -131053, 6, 0, -131052, 6, 0, -131051, 6, 0, -131050, 6, 0, -131049, 6, 0, -131048, 6, 0, -131047, 6, 0, -131046, 6, 0, -131045, 6, 0, -131044, 6, 0, -131043, 8, 0, -131042, 8, 0, -131041, 8, 0, -131040, 8, 0, -131039, 8, 0, -131038, 13, 0, -131037, 8, 0, -131036, 8, 0, -131035, 8, 0, -131034, 8, 0, -131033, 8, 0, -131032, 8, 0, -131031, 13, 0, -131030, 8, 0, -131029, 8, 0, -131028, 8, 0, -65523, 6, 0, -65522, 6, 0, -65521, 6, 0, -65520, 6, 0, -65519, 6, 0, -65518, 6, 0, -65517, 6, 0, -65516, 6, 0, -65515, 6, 0, -65514, 6, 0, -65513, 6, 0, -65512, 6, 0, -65511, 6, 0, -65510, 6, 0, -65509, 6, 0, -65508, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 16, 6, 0, 17, 6, 0, 18, 6, 0, 19, 6, 0, 20, 6, 0, 21, 6, 0, 22, 6, 0, 23, 6, 0, 24, 6, 0, 25, 6, 0, 26, 6, 0, 27, 6, 0, 28, 6, 0, 29, 11, 0, 30, 11, 0, 31, 11, 0, 32, 11, 0, 33, 11, 0, 34, 11, 0, 35, 11, 0, 36, 11, 0, 37, 11, 0, 38, 11, 0, 39, 11, 0, 40, 11, 0, 41, 11, 0, 42, 11, 0, 43, 11, 0, 44, 11, 0, 65549, 6, 0, 65550, 6, 0, 65551, 6, 0, 65552, 6, 0, 65553, 6, 0, 65554, 6, 0, 65555, 6, 0, 65556, 6, 0, 65557, 6, 0, 65558, 6, 0, 65559, 6, 0, 65560, 6, 0, 65561, 6, 0, 65562, 6, 0, 65563, 6, 0, 65564, 6, 0, 65565, 11, 0, 65566, 11, 0, 65567, 11, 0, 65568, 11, 0, 65569, 11, 0, 65570, 11, 0, 65571, 11, 0, 65572, 11, 0, 65573, 11, 0, 65574, 11, 0, 65575, 11, 0, 65576, 11, 0, 65577, 11, 0, 65578, 11, 0, 65579, 11, 0, 65580, 11, 0, 131085, 6, 0, 131086, 6, 0, 131087, 6, 0, 131088, 6, 0, 131089, 6, 0, 131090, 6, 0, 131091, 6, 0, 131092, 6, 0, 131093, 6, 0, 131094, 6, 0, 131095, 6, 0, 131096, 6, 0, 131097, 6, 0, 131098, 6, 0, 131099, 6, 0, 131100, 6, 0, 131101, 8, 0, 131102, 8, 0, 131103, 8, 0, 131104, 8, 0, 131105, 8, 0, 131106, 8, 0, 131107, 8, 0, 131108, 8, 0, 131109, 8, 0, 131110, 8, 0, 131111, 8, 0, 131112, 8, 0, 131113, 8, 0, 131114, 8, 0, 131115, 8, 0, 131116, 8, 0, 196621, 6, 0, 196622, 6, 0, 196623, 6, 0, 196624, 6, 0, 196625, 6, 0, 196626, 6, 0, 196627, 6, 0, 196628, 6, 0, 196629, 6, 0, 196630, 6, 0, 196631, 6, 0, 196632, 6, 0, 196633, 6, 0, 196634, 6, 0, 196635, 6, 0, 196636, 6, 0, 196637, 8, 0, 196638, 8, 0, 196639, 13, 0, 196640, 8, 0, 196641, 8, 0, 196642, 8, 0, 196643, 8, 0, 196644, 8, 0, 196645, 13, 0, 196646, 8, 0, 196647, 8, 0, 196648, 8, 0, 196649, 8, 0, 196650, 8, 0, 196651, 13, 0, 196652, 8, 0 )

[node name="BackgroundObjects" type="TileMap" parent="OtherAreaTiles/BackgroundTiles"]
tile_set = ExtResource( 10 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -327651, 12, 0, -327648, 12, 0, -327645, 12, 0, -327642, 12, 0, -327639, 12, 0, -327636, 12, 0, -262126, 2, 0, -262125, 3, 0, -262120, 4, 0, -196593, 4, 0, -196582, 5, 0, -131043, 14, 0, -131042, 14, 1, -131040, 14, 0, -131039, 14, 1, -131036, 14, 0, -131035, 14, 1, -131034, 14, 0, -131033, 14, 1, -131029, 14, 0, -131028, 14, 1, -65522, 2, 0, -65521, 3, 0, 20, 2, 0, 21, 3, 0, 31, 12, 0, 34, 12, 0, 37, 12, 0, 40, 12, 0, 43, 12, 0, 131087, 7, 0, 131097, 7, 0, 196623, 7, 65536, 196633, 7, 65536, 196640, 14, 0, 196641, 14, 1, 196643, 14, 0, 196644, 14, 1, 196646, 14, 0, 196647, 14, 1, 196649, 14, 0, 196650, 14, 1 )

[node name="AreaTiles" type="Node2D" parent="OtherAreaTiles"]

[node name="LevelTiles" type="TileMap" parent="OtherAreaTiles/AreaTiles"]
tile_set = ExtResource( 10 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -65507, 10, 0, -65506, 10, 0, -65505, 10, 0, -65504, 10, 0, -65503, 10, 0, -65502, 10, 0, -65501, 10, 0, -65500, 10, 0, -65499, 10, 0, -65498, 10, 0, -65497, 10, 0, -65496, 10, 0, -65495, 10, 0, -65494, 10, 0, -65493, 10, 0, -65492, 10, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 1, 0, 196635, 1, 0, 196636, 1, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 9, 0, 262174, 9, 0, 262175, 9, 0, 262176, 9, 0, 262177, 9, 0, 262178, 9, 0, 262179, 9, 0, 262180, 9, 0, 262181, 9, 0, 262182, 9, 0, 262183, 9, 0, 262184, 9, 0, 262185, 9, 0, 262186, 9, 0, 262187, 9, 0, 262188, 9, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0 )

[node name="Church" type="Sprite" parent="."]
position = Vector2( 1143, -27 )
texture = ExtResource( 11 )

[node name="AleEnd" type="Sprite" parent="."]
position = Vector2( 1110, 55 )
rotation = 3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 12 )

[node name="AleSoloEnd" parent="." instance=ExtResource( 1 )]
position = Vector2( 24, -24 )

[node name="YoheSoloEnd" parent="." instance=ExtResource( 3 )]
position = Vector2( 24, 56 )

[node name="AleYohe" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 123, 56 )
collision_layer = 256
collision_mask = 0

[node name="MovementStopArea" type="Area2D" parent="."]
position = Vector2( 3, 0 )
collision_layer = 128
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementStopArea"]
position = Vector2( 127, 20 )
shape = SubResource( 1 )

[node name="CutsceneTimer" type="Timer" parent="."]
one_shot = true

[node name="Kiki" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 210, 58 )
collision_layer = 512

[node name="FirstChangeArea" type="Area2D" parent="."]
position = Vector2( 218, 40 )
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstChangeArea"]
shape = SubResource( 2 )

[node name="SecondChangeArea" type="Area2D" parent="."]
position = Vector2( 474, 41 )
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondChangeArea"]
shape = SubResource( 2 )

[node name="ThirdChangeArea" type="Area2D" parent="."]
position = Vector2( 730, 41 )
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThirdChangeArea"]
shape = SubResource( 2 )

[node name="FourthChangeArea" type="Area2D" parent="."]
position = Vector2( 986, 40 )
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="FourthChangeArea"]
shape = SubResource( 2 )

[node name="EndingArea" type="Area2D" parent="."]
position = Vector2( 1047, 41 )
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndingArea"]
shape = SubResource( 2 )

[node name="FirstCameraPosition" type="Node2D" parent="."]
position = Vector2( 80, 43 )

[node name="SecondCameraPosition" type="Node2D" parent="."]
position = Vector2( 336, 43 )

[node name="ThirdCameraPosition" type="Node2D" parent="."]
position = Vector2( 592, 43 )

[node name="FourthCameraPosition" type="Node2D" parent="."]
position = Vector2( 848, 43 )

[node name="FifthCameraPosition" type="Node2D" parent="."]
position = Vector2( 1104, 43 )

[node name="Blockade" type="StaticBody2D" parent="."]
position = Vector2( 182, 54 )
collision_layer = 256
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blockade"]
shape = SubResource( 3 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -23 )
current = true
zoom = Vector2( 0.25, 0.25 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.5
drag_margin_right = 0.0

[node name="Transition" parent="Camera2D" instance=ExtResource( 13 )]
visible = false
margin_left = -520.0
margin_top = -335.0
margin_right = 504.0
margin_bottom = 265.0
mouse_filter = 2
start_closed = true

[node name="MusicTween" type="Tween" parent="."]

[connection signal="body_entered" from="MovementStopArea" to="MovementStopArea" method="_on_MovementStopArea_body_entered"]
[connection signal="start_cutscene" from="MovementStopArea" to="." method="_on_MovementStopArea_start_cutscene"]
[connection signal="timeout" from="CutsceneTimer" to="." method="_on_CutsceneTimer_timeout"]
[connection signal="body_entered" from="FirstChangeArea" to="." method="_on_FirstChangeArea_body_entered"]
[connection signal="body_entered" from="SecondChangeArea" to="." method="_on_SecondChangeArea_body_entered"]
[connection signal="body_entered" from="ThirdChangeArea" to="." method="_on_ThirdChangeArea_body_entered"]
[connection signal="body_entered" from="FourthChangeArea" to="." method="_on_FourthChangeArea_body_entered"]
[connection signal="body_entered" from="EndingArea" to="." method="_on_EndingArea_body_entered"]
[connection signal="tween_completed" from="MusicTween" to="." method="_on_MusicTween_tween_completed"]
